--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.0",
     "bootstrap": "^5.0.1",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
